Dodanie możliwości zmiany marginesu poprzez stronę.

--- a/praca_inzynierska/templates/index.html
+++ b/praca_inzynierska/templates/index.html
@@ -112,6 +112,13 @@
             <button type="submit" name="form" value="debug">Zatwierdź</button>
         </form>
         </div>
+        <div id="conf_box4">
+        <form method="POST">
+            <label> Margines </label>
+            <input type="range" name="margin" min="0" max="50">
+            <button type="submit" name="form" value="margin">Zatwierdź</button>
+        </form>
+        </div>
     </div>
     
 
