--- a/praca_inzynierska/templates/index.html
+++ b/praca_inzynierska/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podgląd z kamery</title>
+    <title>Menu Główne</title>
     <style>
         /* Styl ogólny */
         body {
