Dodanie informacji o niegotowości modelu do pracy. [zmiana lokalizacji skryptu]

--- a/praca_inzynierska/templates/index.html
+++ b/praca_inzynierska/templates/index.html
@@ -75,6 +75,14 @@
         }
 
     </style>
+    <script>
+        // Funkcja wyświetlająca alert z wiadomością
+        function showAlert(message) {
+            if (message) {
+                alert(message);  // Wyświetla popup alert
+            }
+        }
+    </script>
 </head>
 <body class="dark-mode">
     <div>
