Dodanie możliwości zmiany typu komunikacji poprzez strone www. [fix]

--- a/praca_inzynierska/templates/index.html
+++ b/praca_inzynierska/templates/index.html
@@ -104,7 +104,7 @@
                     <option value="0">Modbus TCP/IP</option>
                     <option value="1">Snap7</option>
                 </select>
-                <button type="submit" name="form" value="tryby">Zatwierdź</button>
+                <button type="submit" name="form" value="comm">Zatwierdź</button>
             </form>
         </div>
         <br></br>
