Dodanie aktualizacji wszytkich wartości po wysłaniu formularza na stronie [margin na global_margin]

--- a/praca_inzynierska/templates/index.html
+++ b/praca_inzynierska/templates/index.html
@@ -125,7 +125,7 @@
         <div id="conf_box5">
             <form method="POST">
                 <label> Margines </label>
-                <input type="range" name="margin" min="0" max="50" value="{{margin}}" id="margin_range">
+                <input type="range" name="margin" min="0" max="50" value="{{global_margin}}" id="margin_range">
                 <button type="submit" name="form" value="margin">Zatwierdź</button>
             </form>
             <div id="margin_value_text"></div>
